[package]
name = "cha-os"
version = "0.1.0"
edition = "2021"
[dependencies]
spin = "0.9.8"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
fmt = "0.1.0"
x86_64 = "0.15.2"
pic8259="0.10.1"
pc-keyboard="0.7.0"
[profile.dev]
panic="abort"
[profile.release]
panic="abort"
